--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.16.5",
     "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
@@ -31,11 +32,13 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.10",
+    "vite": "^5.2.10",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "vite --port 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
